PDFDocBuilder/bin/Debug/Import/C/DebenuPDFLibraryDLL1114.h

__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldDescription(int instanceID, int Index);
__declspec(dllimport) char* __stdcall DPLGetFormFieldDescriptionA(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldFlags(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldFontName(int instanceID, int Index);
__declspec(dllimport) char* __stdcall DPLGetFormFieldFontNameA(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldJavaScript(int instanceID, int Index, wchar_t * ActionType);
__declspec(dllimport) char* __stdcall DPLGetFormFieldJavaScriptA(int instanceID, int Index, char * ActionType);
__declspec(dllimport) int __stdcall DPLGetFormFieldKidCount(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldKidTempIndex(int instanceID, int Index, int SubIndex);
__declspec(dllimport) int __stdcall DPLGetFormFieldMaxLen(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldNoExport(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldPage(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldPrintable(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldReadOnly(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldRequired(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldRichTextString(int instanceID, int Index, wchar_t * Key);
__declspec(dllimport) char* __stdcall DPLGetFormFieldRichTextStringA(int instanceID, int Index, char * Key);
__declspec(dllimport) int __stdcall DPLGetFormFieldRotation(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldSubCount(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldSubDisplayName(int instanceID, int Index, int SubIndex);
__declspec(dllimport) char* __stdcall DPLGetFormFieldSubDisplayNameA(int instanceID, int Index, int SubIndex);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldSubName(int instanceID, int Index, int SubIndex);
__declspec(dllimport) char* __stdcall DPLGetFormFieldSubNameA(int instanceID, int Index, int SubIndex);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldSubmitActionString(int instanceID, int Index, wchar_t * ActionType);
__declspec(dllimport) char* __stdcall DPLGetFormFieldSubmitActionStringA(int instanceID, int Index, char * ActionType);
__declspec(dllimport) int __stdcall DPLGetFormFieldTabOrder(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldTabOrderEx(int instanceID, int Index, int Options);
__declspec(dllimport) int __stdcall DPLGetFormFieldTextFlags(int instanceID, int Index, int ValueKey);
__declspec(dllimport) double __stdcall DPLGetFormFieldTextSize(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldTitle(int instanceID, int Index);
__declspec(dllimport) char* __stdcall DPLGetFormFieldTitleA(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldType(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldValue(int instanceID, int Index);
__declspec(dllimport) char* __stdcall DPLGetFormFieldValueA(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldValueByTitle(int instanceID, wchar_t * Title);
__declspec(dllimport) char* __stdcall DPLGetFormFieldValueByTitleA(int instanceID, char * Title);
__declspec(dllimport) int __stdcall DPLGetFormFieldVisible(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldWebLink(int instanceID, int Index, wchar_t * ActionType);
__declspec(dllimport) char* __stdcall DPLGetFormFieldWebLinkA(int instanceID, int Index, char * ActionType);
__declspec(dllimport) int __stdcall DPLGetFormFontCount(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFontName(int instanceID, int FontIndex);
__declspec(dllimport) char* __stdcall DPLGetFormFontNameA(int instanceID, int FontIndex);
__declspec(dllimport) wchar_t* __stdcall DPLGetGlobalJavaScript(int instanceID, wchar_t * PackageName);
__declspec(dllimport) char* __stdcall DPLGetGlobalJavaScriptA(int instanceID, char * PackageName);
__declspec(dllimport) double __stdcall DPLGetHTMLTextHeight(int instanceID, double Width, wchar_t * HTMLText);
__declspec(dllimport) double __stdcall DPLGetHTMLTextHeightA(int instanceID, double Width, char * HTMLText);
__declspec(dllimport) int __stdcall DPLGetHTMLTextLineCount(int instanceID, double Width, wchar_t * HTMLText);
__declspec(dllimport) int __stdcall DPLGetHTMLTextLineCountA(int instanceID, double Width, char * HTMLText);
__declspec(dllimport) double __stdcall DPLGetHTMLTextWidth(int instanceID, double MaxWidth, wchar_t * HTMLText);
__declspec(dllimport) double __stdcall DPLGetHTMLTextWidthA(int instanceID, double MaxWidth, char * HTMLText);
__declspec(dllimport) int __stdcall DPLGetImageID(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetImageListCount(int instanceID, int ImageListID);
__declspec(dllimport) char* __stdcall DPLGetImageListItemDataToString(int instanceID, int ImageListID, int ImageIndex, int Options);
__declspec(dllimport) double __stdcall DPLGetImageListItemDblProperty(int instanceID, int ImageListID, int ImageIndex, int PropertyID);
__declspec(dllimport) wchar_t* __stdcall DPLGetImageListItemFormatDesc(int instanceID, int ImageListID, int ImageIndex, int Options);
__declspec(dllimport) char* __stdcall DPLGetImageListItemFormatDescA(int instanceID, int ImageListID, int ImageIndex, int Options);
__declspec(dllimport) int __stdcall DPLGetImageListItemIntProperty(int instanceID, int ImageListID, int ImageIndex, int PropertyID);
__declspec(dllimport) int __stdcall DPLGetImageMeasureDict(int instanceID);
__declspec(dllimport) int __stdcall DPLGetImagePageCount(int instanceID, wchar_t * FileName);
__declspec(dllimport) int __stdcall DPLGetImagePageCountA(int instanceID, char * FileName);
__declspec(dllimport) int __stdcall DPLGetImagePageCountFromString(int instanceID, char * Source);
__declspec(dllimport) int __stdcall DPLGetImagePtDataDict(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLGetInformation(int instanceID, int Key);
__declspec(dllimport) char* __stdcall DPLGetInformationA(int instanceID, int Key);
__declspec(dllimport) wchar_t* __stdcall DPLGetInstalledFontsByCharset(int instanceID, int CharsetIndex, int Options);
__declspec(dllimport) char* __stdcall DPLGetInstalledFontsByCharsetA(int instanceID, int CharsetIndex, int Options);
__declspec(dllimport) wchar_t* __stdcall DPLGetInstalledFontsByCodePage(int instanceID, int CodePage, int Options);
__declspec(dllimport) char* __stdcall DPLGetInstalledFontsByCodePageA(int instanceID, int CodePage, int Options);
__declspec(dllimport) int __stdcall DPLGetKerning(int instanceID, wchar_t * CharPair);
__declspec(dllimport) int __stdcall DPLGetKerningA(int instanceID, char * CharPair);
__declspec(dllimport) wchar_t* __stdcall DPLGetLatestPrinterNames(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetLatestPrinterNamesA(int instanceID);
__declspec(dllimport) int __stdcall DPLGetMaxObjectNumber(int instanceID);
__declspec(dllimport) int __stdcall DPLGetMeasureDictBoundsCount(int instanceID, int MeasureDictID);
__declspec(dllimport) double __stdcall DPLGetMeasureDictBoundsItem(int instanceID, int MeasureDictID, int ItemIndex);
__declspec(dllimport) int __stdcall DPLGetMeasureDictCoordinateSystem(int instanceID, int MeasureDictID);
__declspec(dllimport) int __stdcall DPLGetMeasureDictDCSDict(int instanceID, int MeasureDictID);
__declspec(dllimport) int __stdcall DPLGetMeasureDictGCSDict(int instanceID, int MeasureDictID);
__declspec(dllimport) int __stdcall DPLGetMeasureDictGPTSCount(int instanceID, int MeasureDictID);
__declspec(dllimport) double __stdcall DPLGetMeasureDictGPTSItem(int instanceID, int MeasureDictID, int ItemIndex);
__declspec(dllimport) int __stdcall DPLGetMeasureDictLPTSCount(int instanceID, int MeasureDictID);
__declspec(dllimport) double __stdcall DPLGetMeasureDictLPTSItem(int instanceID, int MeasureDictID, int ItemIndex);
__declspec(dllimport) int __stdcall DPLGetMeasureDictPDU(int instanceID, int MeasureDictID, int UnitIndex);
__declspec(dllimport) int __stdcall DPLGetNamedDestination(int instanceID, wchar_t * DestName);
__declspec(dllimport) int __stdcall DPLGetNamedDestinationA(int instanceID, char * DestName);
__declspec(dllimport) int __stdcall DPLGetNextOutline(int instanceID, int OutlineID);