PDFDocBuilder/bin/Debug/Import/VB6/DebenuPDFLibraryDLL1114.bas

Public Declare Function DPLGetFormFieldDescription LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldDescriptionA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As String
Public Declare Function DPLGetFormFieldFlags LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldFlags" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldFontName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldFontNameA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As String
Public Declare Function DPLGetFormFieldJavaScript LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldJavaScriptA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal sActionType As String) As String
Public Declare Function DPLGetFormFieldKidCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldKidCount" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldKidTempIndex LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldKidTempIndex" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iSubIndex As Long) As Long
Public Declare Function DPLGetFormFieldMaxLen LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldMaxLen" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldNoExport LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldNoExport" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldPage" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldPrintable LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldPrintable" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldReadOnly LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldReadOnly" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldRequired LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldRequired" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldRichTextString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldRichTextStringA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal sKey As String) As String
Public Declare Function DPLGetFormFieldRotation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldRotation" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldSubCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldSubCount" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldSubDisplayName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldSubDisplayNameA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iSubIndex As Long) As String
Public Declare Function DPLGetFormFieldSubName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldSubNameA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iSubIndex As Long) As String
Public Declare Function DPLGetFormFieldSubmitActionString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldSubmitActionStringA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal sActionType As String) As String
Public Declare Function DPLGetFormFieldTabOrder LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldTabOrder" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldTabOrderEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldTabOrderEx" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLGetFormFieldTextFlags LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldTextFlags" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iValueKey As Long) As Long
Public Declare Function DPLGetFormFieldTextSize LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldTextSize" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Double
Public Declare Function DPLGetFormFieldTitle LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldTitleA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As String
Public Declare Function DPLGetFormFieldType LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldType" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldValue LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldValueA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As String
Public Declare Function DPLGetFormFieldValueByTitle LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldValueByTitleA" ( _
  ByVal iInstanceID As Long, ByVal sTitle As String) As String
Public Declare Function DPLGetFormFieldVisible LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldVisible" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldWebLink LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldWebLinkA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal sActionType As String) As String
Public Declare Function DPLGetFormFontCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFontCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetFormFontName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFontNameA" ( _
  ByVal iInstanceID As Long, ByVal iFontIndex As Long) As String
Public Declare Function DPLGetGlobalJavaScript LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetGlobalJavaScriptA" ( _
  ByVal iInstanceID As Long, ByVal sPackageName As String) As String
Public Declare Function DPLGetHTMLTextHeight LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetHTMLTextHeightA" ( _
  ByVal iInstanceID As Long, ByVal dWidth As Double, _
  ByVal sHTMLText As String) As Double
Public Declare Function DPLGetHTMLTextLineCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetHTMLTextLineCountA" ( _
  ByVal iInstanceID As Long, ByVal dWidth As Double, _
  ByVal sHTMLText As String) As Long
Public Declare Function DPLGetHTMLTextWidth LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetHTMLTextWidthA" ( _
  ByVal iInstanceID As Long, ByVal dMaxWidth As Double, _
  ByVal sHTMLText As String) As Double
Public Declare Function DPLGetImageID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetImageID" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetImageListCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetImageListCount" ( _
  ByVal iInstanceID As Long, ByVal iImageListID As Long) As Long
Public Declare Function DPLGetImageListItemDataToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetImageListItemDataToString" ( _
  ByVal iInstanceID As Long, ByVal iImageListID As Long, _
  ByVal iImageIndex As Long, ByVal iOptions As Long) As String
Public Declare Function DPLGetImageListItemDblProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetImageListItemDblProperty" ( _
  ByVal iInstanceID As Long, ByVal iImageListID As Long, _
  ByVal iImageIndex As Long, ByVal iPropertyID As Long) As Double
Public Declare Function DPLGetImageListItemFormatDesc LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetImageListItemFormatDescA" ( _
  ByVal iInstanceID As Long, ByVal iImageListID As Long, _
  ByVal iImageIndex As Long, ByVal iOptions As Long) As String
Public Declare Function DPLGetImageListItemIntProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetImageListItemIntProperty" ( _
  ByVal iInstanceID As Long, ByVal iImageListID As Long, _
  ByVal iImageIndex As Long, ByVal iPropertyID As Long) As Long
Public Declare Function DPLGetImageMeasureDict LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetImageMeasureDict" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetImagePageCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetImagePageCountA" ( _
  ByVal iInstanceID As Long, ByVal sFileName As String) As Long
Public Declare Function DPLGetImagePageCountFromString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetImagePageCountFromString" ( _
  ByVal iInstanceID As Long, ByVal sSource As String) As Long
Public Declare Function DPLGetImagePtDataDict LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetImagePtDataDict" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetInformation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetInformationA" ( _
  ByVal iInstanceID As Long, ByVal iKey As Long) As String
Public Declare Function DPLGetInstalledFontsByCharset LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetInstalledFontsByCharsetA" ( _
  ByVal iInstanceID As Long, ByVal iCharsetIndex As Long, _
  ByVal iOptions As Long) As String
Public Declare Function DPLGetInstalledFontsByCodePage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetInstalledFontsByCodePageA" ( _
  ByVal iInstanceID As Long, ByVal iCodePage As Long, _
  ByVal iOptions As Long) As String
Public Declare Function DPLGetKerning LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetKerningA" ( _
  ByVal iInstanceID As Long, ByVal sCharPair As String) As Long
Public Declare Function DPLGetLatestPrinterNames LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetLatestPrinterNamesA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetMaxObjectNumber LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMaxObjectNumber" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetMeasureDictBoundsCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMeasureDictBoundsCount" ( _
  ByVal iInstanceID As Long, ByVal iMeasureDictID As Long) As Long
Public Declare Function DPLGetMeasureDictBoundsItem LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMeasureDictBoundsItem" ( _
  ByVal iInstanceID As Long, ByVal iMeasureDictID As Long, _
  ByVal iItemIndex As Long) As Double
Public Declare Function DPLGetMeasureDictCoordinateSystem LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMeasureDictCoordinateSystem" ( _
  ByVal iInstanceID As Long, ByVal iMeasureDictID As Long) As Long
Public Declare Function DPLGetMeasureDictDCSDict LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMeasureDictDCSDict" ( _
  ByVal iInstanceID As Long, ByVal iMeasureDictID As Long) As Long
Public Declare Function DPLGetMeasureDictGCSDict LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMeasureDictGCSDict" ( _
  ByVal iInstanceID As Long, ByVal iMeasureDictID As Long) As Long
Public Declare Function DPLGetMeasureDictGPTSCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMeasureDictGPTSCount" ( _
  ByVal iInstanceID As Long, ByVal iMeasureDictID As Long) As Long
Public Declare Function DPLGetMeasureDictGPTSItem LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMeasureDictGPTSItem" ( _
  ByVal iInstanceID As Long, ByVal iMeasureDictID As Long, _
  ByVal iItemIndex As Long) As Double
Public Declare Function DPLGetMeasureDictLPTSCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMeasureDictLPTSCount" ( _
  ByVal iInstanceID As Long, ByVal iMeasureDictID As Long) As Long
Public Declare Function DPLGetMeasureDictLPTSItem LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMeasureDictLPTSItem" ( _
  ByVal iInstanceID As Long, ByVal iMeasureDictID As Long, _
  ByVal iItemIndex As Long) As Double
Public Declare Function DPLGetMeasureDictPDU LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetMeasureDictPDU" ( _
  ByVal iInstanceID As Long, ByVal iMeasureDictID As Long, _
  ByVal iUnitIndex As Long) As Long
Public Declare Function DPLGetNamedDestination LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetNamedDestinationA" ( _
  ByVal iInstanceID As Long, ByVal sDestName As String) As Long
Public Declare Function DPLGetNextOutline LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetNextOutline" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
